[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
chacha20poly1305 = { workspace = true }
ctrlc = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
tun = { workspace = true }
x25519-dalek = { workspace = true }